pymachi.output
Terminals unused in grammar

   RANGETOK
   CLASSTOK
   SELFTOK
   INPUTTOK
   PRINTTOK
   IOFORMATTOK
   LISTTOK
   SETTOK
   TUPLETOK
   INTTOK
   FLOATTOK
   FROMTOK
   FORTOK
   IMPORTTOK
   TRYTOK
   EXCEPTIONTOK
   EXITTOK
   DOTOP
   OSQBRACEOP
   CSQBRACEOP
   LOGICANDOP
   LOGICOROP
   LOGICNOTOP
   LOGICNANDOP
   LOGICNOROP
   LOGICXOROP
   INTOK
   LINENO


State 43 conflicts: 10 shift/reduce
State 44 conflicts: 10 shift/reduce
State 45 conflicts: 10 shift/reduce
State 46 conflicts: 10 shift/reduce
State 47 conflicts: 10 shift/reduce
State 48 conflicts: 10 shift/reduce
State 49 conflicts: 10 shift/reduce
State 50 conflicts: 10 shift/reduce
State 51 conflicts: 10 shift/reduce
State 52 conflicts: 10 shift/reduce


Grammar

    0 $accept: lines $end

    1 lines: %empty
    2      | lines line EOL

    3 line: COMMENTOP STRING EOL
    4     | EOL
    5     | assignment EOL
    6     | block COLONOP EOL INDENTTOK lines OUTDENTOP

    7 assignment: IDENTIFIER ASSIGNMENTOP expression

    8 block: IFTOK expression
    9      | ELIFTOK expression
   10      | ELSETOK
   11      | DEFTOK IDENTIFIER OBRACEOP parameters CBRACEOP
   12      | WHILETOK expression

   13 expression: IDENTIFIER
   14           | INT
   15           | DECIMAL
   16           | STRING
   17           | TRUEOP
   18           | FALSEOP
   19           | expression PLUSOP expression
   20           | expression MINUSOP expression
   21           | expression MULTOP expression
   22           | expression DIVOP expression
   23           | expression POWOP expression
   24           | expression DOUBLEEQOP expression
   25           | expression LESSTHANOP expression
   26           | expression GREATERTHANOP expression
   27           | expression GREATERTHANOREQOP expression
   28           | expression LESSTHANOREQOP expression

   29 parameters: IDENTIFIER
   30           | IDENTIFIER COMMAOP


Terminals, with rules where they appear

$end (0) 0
error (256)
INT (258) 14
DECIMAL (259) 15
STRING (260) 3 16
ASSIGNMENTOP (261) 7
EOL (262) 2 3 4 5 6
OBRACEOP (263) 11
CBRACEOP (264) 11
COLONOP (265) 6
PLUSOP (266) 19
MINUSOP (267) 20
MULTOP (268) 21
DIVOP (269) 22
POWOP (270) 23
DOUBLEEQOP (271) 24
LESSTHANOP (272) 25
GREATERTHANOP (273) 26
LESSTHANOREQOP (274) 28
GREATERTHANOREQOP (275) 27
IFTOK (276) 8
ELIFTOK (277) 9
ELSETOK (278) 10
COMMENTOP (279) 3
WHILETOK (280) 12
DEFTOK (281) 11
IDENTIFIER (282) 7 11 13 29 30
INDENTTOK (283) 6
COMMAOP (284) 30
OUTDENTOP (285) 6
RANGETOK (286)
CLASSTOK (287)
SELFTOK (288)
INPUTTOK (289)
PRINTTOK (290)
IOFORMATTOK (291)
LISTTOK (292)
SETTOK (293)
TUPLETOK (294)
INTTOK (295)
FLOATTOK (296)
FROMTOK (297)
FORTOK (298)
IMPORTTOK (299)
TRYTOK (300)
EXCEPTIONTOK (301)
EXITTOK (302)
DOTOP (303)
OSQBRACEOP (304)
CSQBRACEOP (305)
LOGICANDOP (306)
LOGICOROP (307)
LOGICNOTOP (308)
LOGICNANDOP (309)
LOGICNOROP (310)
LOGICXOROP (311)
INTOK (312)
TRUEOP (313) 17
FALSEOP (314) 18
LINENO (315)


Nonterminals, with rules where they appear

$accept (61)
    on left: 0
lines (62)
    on left: 1 2, on right: 0 2 6
line (63)
    on left: 3 4 5 6, on right: 2
assignment (64)
    on left: 7, on right: 5
block (65)
    on left: 8 9 10 11 12, on right: 6
expression (66)
    on left: 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28, on right:
    7 8 9 12 19 20 21 22 23 24 25 26 27 28
parameters (67)
    on left: 29 30, on right: 11


State 0

    0 $accept: . lines $end

    $default  reduce using rule 1 (lines)

    lines  go to state 1


State 1

    0 $accept: lines . $end
    2 lines: lines . line EOL

    $end        shift, and go to state 2
    EOL         shift, and go to state 3
    IFTOK       shift, and go to state 4
    ELIFTOK     shift, and go to state 5
    ELSETOK     shift, and go to state 6
    COMMENTOP   shift, and go to state 7
    WHILETOK    shift, and go to state 8
    DEFTOK      shift, and go to state 9
    IDENTIFIER  shift, and go to state 10

    line        go to state 11
    assignment  go to state 12
    block       go to state 13


State 2

    0 $accept: lines $end .

    $default  accept


State 3

    4 line: EOL .

    $default  reduce using rule 4 (line)


State 4

    8 block: IFTOK . expression

    INT         shift, and go to state 14
    DECIMAL     shift, and go to state 15
    STRING      shift, and go to state 16
    IDENTIFIER  shift, and go to state 17
    TRUEOP      shift, and go to state 18
    FALSEOP     shift, and go to state 19

    expression  go to state 20


State 5

    9 block: ELIFTOK . expression

    INT         shift, and go to state 14
    DECIMAL     shift, and go to state 15
    STRING      shift, and go to state 16
    IDENTIFIER  shift, and go to state 17
    TRUEOP      shift, and go to state 18
    FALSEOP     shift, and go to state 19

    expression  go to state 21


State 6

   10 block: ELSETOK .

    $default  reduce using rule 10 (block)


State 7

    3 line: COMMENTOP . STRING EOL

    STRING  shift, and go to state 22


State 8

   12 block: WHILETOK . expression

    INT         shift, and go to state 14
    DECIMAL     shift, and go to state 15
    STRING      shift, and go to state 16
    IDENTIFIER  shift, and go to state 17
    TRUEOP      shift, and go to state 18
    FALSEOP     shift, and go to state 19

    expression  go to state 23


State 9

   11 block: DEFTOK . IDENTIFIER OBRACEOP parameters CBRACEOP

    IDENTIFIER  shift, and go to state 24


State 10

    7 assignment: IDENTIFIER . ASSIGNMENTOP expression

    ASSIGNMENTOP  shift, and go to state 25


State 11

    2 lines: lines line . EOL

    EOL  shift, and go to state 26


State 12

    5 line: assignment . EOL

    EOL  shift, and go to state 27


State 13

    6 line: block . COLONOP EOL INDENTTOK lines OUTDENTOP

    COLONOP  shift, and go to state 28


State 14

   14 expression: INT .

    $default  reduce using rule 14 (expression)


State 15

   15 expression: DECIMAL .

    $default  reduce using rule 15 (expression)


State 16

   16 expression: STRING .

    $default  reduce using rule 16 (expression)


State 17

   13 expression: IDENTIFIER .

    $default  reduce using rule 13 (expression)


State 18

   17 expression: TRUEOP .

    $default  reduce using rule 17 (expression)


State 19

   18 expression: FALSEOP .

    $default  reduce using rule 18 (expression)


State 20

    8 block: IFTOK expression .
   19 expression: expression . PLUSOP expression
   20           | expression . MINUSOP expression
   21           | expression . MULTOP expression
   22           | expression . DIVOP expression
   23           | expression . POWOP expression
   24           | expression . DOUBLEEQOP expression
   25           | expression . LESSTHANOP expression
   26           | expression . GREATERTHANOP expression
   27           | expression . GREATERTHANOREQOP expression
   28           | expression . LESSTHANOREQOP expression

    PLUSOP             shift, and go to state 29
    MINUSOP            shift, and go to state 30
    MULTOP             shift, and go to state 31
    DIVOP              shift, and go to state 32
    POWOP              shift, and go to state 33
    DOUBLEEQOP         shift, and go to state 34
    LESSTHANOP         shift, and go to state 35
    GREATERTHANOP      shift, and go to state 36
    LESSTHANOREQOP     shift, and go to state 37
    GREATERTHANOREQOP  shift, and go to state 38

    $default  reduce using rule 8 (block)


State 21

    9 block: ELIFTOK expression .
   19 expression: expression . PLUSOP expression
   20           | expression . MINUSOP expression
   21           | expression . MULTOP expression
   22           | expression . DIVOP expression
   23           | expression . POWOP expression
   24           | expression . DOUBLEEQOP expression
   25           | expression . LESSTHANOP expression
   26           | expression . GREATERTHANOP expression
   27           | expression . GREATERTHANOREQOP expression
   28           | expression . LESSTHANOREQOP expression

    PLUSOP             shift, and go to state 29
    MINUSOP            shift, and go to state 30
    MULTOP             shift, and go to state 31
    DIVOP              shift, and go to state 32
    POWOP              shift, and go to state 33
    DOUBLEEQOP         shift, and go to state 34
    LESSTHANOP         shift, and go to state 35
    GREATERTHANOP      shift, and go to state 36
    LESSTHANOREQOP     shift, and go to state 37
    GREATERTHANOREQOP  shift, and go to state 38

    $default  reduce using rule 9 (block)


State 22

    3 line: COMMENTOP STRING . EOL

    EOL  shift, and go to state 39


State 23

   12 block: WHILETOK expression .
   19 expression: expression . PLUSOP expression
   20           | expression . MINUSOP expression
   21           | expression . MULTOP expression
   22           | expression . DIVOP expression
   23           | expression . POWOP expression
   24           | expression . DOUBLEEQOP expression
   25           | expression . LESSTHANOP expression
   26           | expression . GREATERTHANOP expression
   27           | expression . GREATERTHANOREQOP expression
   28           | expression . LESSTHANOREQOP expression

    PLUSOP             shift, and go to state 29
    MINUSOP            shift, and go to state 30
    MULTOP             shift, and go to state 31
    DIVOP              shift, and go to state 32
    POWOP              shift, and go to state 33
    DOUBLEEQOP         shift, and go to state 34
    LESSTHANOP         shift, and go to state 35
    GREATERTHANOP      shift, and go to state 36
    LESSTHANOREQOP     shift, and go to state 37
    GREATERTHANOREQOP  shift, and go to state 38

    $default  reduce using rule 12 (block)


State 24

   11 block: DEFTOK IDENTIFIER . OBRACEOP parameters CBRACEOP

    OBRACEOP  shift, and go to state 40


State 25

    7 assignment: IDENTIFIER ASSIGNMENTOP . expression

    INT         shift, and go to state 14
    DECIMAL     shift, and go to state 15
    STRING      shift, and go to state 16
    IDENTIFIER  shift, and go to state 17
    TRUEOP      shift, and go to state 18
    FALSEOP     shift, and go to state 19

    expression  go to state 41


State 26

    2 lines: lines line EOL .

    $default  reduce using rule 2 (lines)


State 27

    5 line: assignment EOL .

    $default  reduce using rule 5 (line)


State 28

    6 line: block COLONOP . EOL INDENTTOK lines OUTDENTOP

    EOL  shift, and go to state 42


State 29

   19 expression: expression PLUSOP . expression

    INT         shift, and go to state 14
    DECIMAL     shift, and go to state 15
    STRING      shift, and go to state 16
    IDENTIFIER  shift, and go to state 17
    TRUEOP      shift, and go to state 18
    FALSEOP     shift, and go to state 19

    expression  go to state 43


State 30

   20 expression: expression MINUSOP . expression

    INT         shift, and go to state 14
    DECIMAL     shift, and go to state 15
    STRING      shift, and go to state 16
    IDENTIFIER  shift, and go to state 17
    TRUEOP      shift, and go to state 18
    FALSEOP     shift, and go to state 19

    expression  go to state 44


State 31

   21 expression: expression MULTOP . expression

    INT         shift, and go to state 14
    DECIMAL     shift, and go to state 15
    STRING      shift, and go to state 16
    IDENTIFIER  shift, and go to state 17
    TRUEOP      shift, and go to state 18
    FALSEOP     shift, and go to state 19

    expression  go to state 45


State 32

   22 expression: expression DIVOP . expression

    INT         shift, and go to state 14
    DECIMAL     shift, and go to state 15
    STRING      shift, and go to state 16
    IDENTIFIER  shift, and go to state 17
    TRUEOP      shift, and go to state 18
    FALSEOP     shift, and go to state 19

    expression  go to state 46


State 33

   23 expression: expression POWOP . expression

    INT         shift, and go to state 14
    DECIMAL     shift, and go to state 15
    STRING      shift, and go to state 16
    IDENTIFIER  shift, and go to state 17
    TRUEOP      shift, and go to state 18
    FALSEOP     shift, and go to state 19

    expression  go to state 47


State 34

   24 expression: expression DOUBLEEQOP . expression

    INT         shift, and go to state 14
    DECIMAL     shift, and go to state 15
    STRING      shift, and go to state 16
    IDENTIFIER  shift, and go to state 17
    TRUEOP      shift, and go to state 18
    FALSEOP     shift, and go to state 19

    expression  go to state 48


State 35

   25 expression: expression LESSTHANOP . expression

    INT         shift, and go to state 14
    DECIMAL     shift, and go to state 15
    STRING      shift, and go to state 16
    IDENTIFIER  shift, and go to state 17
    TRUEOP      shift, and go to state 18
    FALSEOP     shift, and go to state 19

    expression  go to state 49


State 36

   26 expression: expression GREATERTHANOP . expression

    INT         shift, and go to state 14
    DECIMAL     shift, and go to state 15
    STRING      shift, and go to state 16
    IDENTIFIER  shift, and go to state 17
    TRUEOP      shift, and go to state 18
    FALSEOP     shift, and go to state 19

    expression  go to state 50


State 37

   28 expression: expression LESSTHANOREQOP . expression

    INT         shift, and go to state 14
    DECIMAL     shift, and go to state 15
    STRING      shift, and go to state 16
    IDENTIFIER  shift, and go to state 17
    TRUEOP      shift, and go to state 18
    FALSEOP     shift, and go to state 19

    expression  go to state 51


State 38

   27 expression: expression GREATERTHANOREQOP . expression

    INT         shift, and go to state 14
    DECIMAL     shift, and go to state 15
    STRING      shift, and go to state 16
    IDENTIFIER  shift, and go to state 17
    TRUEOP      shift, and go to state 18
    FALSEOP     shift, and go to state 19

    expression  go to state 52


State 39

    3 line: COMMENTOP STRING EOL .

    $default  reduce using rule 3 (line)


State 40

   11 block: DEFTOK IDENTIFIER OBRACEOP . parameters CBRACEOP

    IDENTIFIER  shift, and go to state 53

    parameters  go to state 54


State 41

    7 assignment: IDENTIFIER ASSIGNMENTOP expression .
   19 expression: expression . PLUSOP expression
   20           | expression . MINUSOP expression
   21           | expression . MULTOP expression
   22           | expression . DIVOP expression
   23           | expression . POWOP expression
   24           | expression . DOUBLEEQOP expression
   25           | expression . LESSTHANOP expression
   26           | expression . GREATERTHANOP expression
   27           | expression . GREATERTHANOREQOP expression
   28           | expression . LESSTHANOREQOP expression

    PLUSOP             shift, and go to state 29
    MINUSOP            shift, and go to state 30
    MULTOP             shift, and go to state 31
    DIVOP              shift, and go to state 32
    POWOP              shift, and go to state 33
    DOUBLEEQOP         shift, and go to state 34
    LESSTHANOP         shift, and go to state 35
    GREATERTHANOP      shift, and go to state 36
    LESSTHANOREQOP     shift, and go to state 37
    GREATERTHANOREQOP  shift, and go to state 38

    $default  reduce using rule 7 (assignment)


State 42

    6 line: block COLONOP EOL . INDENTTOK lines OUTDENTOP

    INDENTTOK  shift, and go to state 55


State 43

   19 expression: expression . PLUSOP expression
   19           | expression PLUSOP expression .
   20           | expression . MINUSOP expression
   21           | expression . MULTOP expression
   22           | expression . DIVOP expression
   23           | expression . POWOP expression
   24           | expression . DOUBLEEQOP expression
   25           | expression . LESSTHANOP expression
   26           | expression . GREATERTHANOP expression
   27           | expression . GREATERTHANOREQOP expression
   28           | expression . LESSTHANOREQOP expression

    PLUSOP             shift, and go to state 29
    MINUSOP            shift, and go to state 30
    MULTOP             shift, and go to state 31
    DIVOP              shift, and go to state 32
    POWOP              shift, and go to state 33
    DOUBLEEQOP         shift, and go to state 34
    LESSTHANOP         shift, and go to state 35
    GREATERTHANOP      shift, and go to state 36
    LESSTHANOREQOP     shift, and go to state 37
    GREATERTHANOREQOP  shift, and go to state 38

    PLUSOP             [reduce using rule 19 (expression)]
    MINUSOP            [reduce using rule 19 (expression)]
    MULTOP             [reduce using rule 19 (expression)]
    DIVOP              [reduce using rule 19 (expression)]
    POWOP              [reduce using rule 19 (expression)]
    DOUBLEEQOP         [reduce using rule 19 (expression)]
    LESSTHANOP         [reduce using rule 19 (expression)]
    GREATERTHANOP      [reduce using rule 19 (expression)]
    LESSTHANOREQOP     [reduce using rule 19 (expression)]
    GREATERTHANOREQOP  [reduce using rule 19 (expression)]
    $default           reduce using rule 19 (expression)


State 44

   19 expression: expression . PLUSOP expression
   20           | expression . MINUSOP expression
   20           | expression MINUSOP expression .
   21           | expression . MULTOP expression
   22           | expression . DIVOP expression
   23           | expression . POWOP expression
   24           | expression . DOUBLEEQOP expression
   25           | expression . LESSTHANOP expression
   26           | expression . GREATERTHANOP expression
   27           | expression . GREATERTHANOREQOP expression
   28           | expression . LESSTHANOREQOP expression

    PLUSOP             shift, and go to state 29
    MINUSOP            shift, and go to state 30
    MULTOP             shift, and go to state 31
    DIVOP              shift, and go to state 32
    POWOP              shift, and go to state 33
    DOUBLEEQOP         shift, and go to state 34
    LESSTHANOP         shift, and go to state 35
    GREATERTHANOP      shift, and go to state 36
    LESSTHANOREQOP     shift, and go to state 37
    GREATERTHANOREQOP  shift, and go to state 38

    PLUSOP             [reduce using rule 20 (expression)]
    MINUSOP            [reduce using rule 20 (expression)]
    MULTOP             [reduce using rule 20 (expression)]
    DIVOP              [reduce using rule 20 (expression)]
    POWOP              [reduce using rule 20 (expression)]
    DOUBLEEQOP         [reduce using rule 20 (expression)]
    LESSTHANOP         [reduce using rule 20 (expression)]
    GREATERTHANOP      [reduce using rule 20 (expression)]
    LESSTHANOREQOP     [reduce using rule 20 (expression)]
    GREATERTHANOREQOP  [reduce using rule 20 (expression)]
    $default           reduce using rule 20 (expression)


State 45

   19 expression: expression . PLUSOP expression
   20           | expression . MINUSOP expression
   21           | expression . MULTOP expression
   21           | expression MULTOP expression .
   22           | expression . DIVOP expression
   23           | expression . POWOP expression
   24           | expression . DOUBLEEQOP expression
   25           | expression . LESSTHANOP expression
   26           | expression . GREATERTHANOP expression
   27           | expression . GREATERTHANOREQOP expression
   28           | expression . LESSTHANOREQOP expression

    PLUSOP             shift, and go to state 29
    MINUSOP            shift, and go to state 30
    MULTOP             shift, and go to state 31
    DIVOP              shift, and go to state 32
    POWOP              shift, and go to state 33
    DOUBLEEQOP         shift, and go to state 34
    LESSTHANOP         shift, and go to state 35
    GREATERTHANOP      shift, and go to state 36
    LESSTHANOREQOP     shift, and go to state 37
    GREATERTHANOREQOP  shift, and go to state 38

    PLUSOP             [reduce using rule 21 (expression)]
    MINUSOP            [reduce using rule 21 (expression)]
    MULTOP             [reduce using rule 21 (expression)]
    DIVOP              [reduce using rule 21 (expression)]
    POWOP              [reduce using rule 21 (expression)]
    DOUBLEEQOP         [reduce using rule 21 (expression)]
    LESSTHANOP         [reduce using rule 21 (expression)]
    GREATERTHANOP      [reduce using rule 21 (expression)]
    LESSTHANOREQOP     [reduce using rule 21 (expression)]
    GREATERTHANOREQOP  [reduce using rule 21 (expression)]
    $default           reduce using rule 21 (expression)


State 46

   19 expression: expression . PLUSOP expression
   20           | expression . MINUSOP expression
   21           | expression . MULTOP expression
   22           | expression . DIVOP expression
   22           | expression DIVOP expression .
   23           | expression . POWOP expression
   24           | expression . DOUBLEEQOP expression
   25           | expression . LESSTHANOP expression
   26           | expression . GREATERTHANOP expression
   27           | expression . GREATERTHANOREQOP expression
   28           | expression . LESSTHANOREQOP expression

    PLUSOP             shift, and go to state 29
    MINUSOP            shift, and go to state 30
    MULTOP             shift, and go to state 31
    DIVOP              shift, and go to state 32
    POWOP              shift, and go to state 33
    DOUBLEEQOP         shift, and go to state 34
    LESSTHANOP         shift, and go to state 35
    GREATERTHANOP      shift, and go to state 36
    LESSTHANOREQOP     shift, and go to state 37
    GREATERTHANOREQOP  shift, and go to state 38

    PLUSOP             [reduce using rule 22 (expression)]
    MINUSOP            [reduce using rule 22 (expression)]
    MULTOP             [reduce using rule 22 (expression)]
    DIVOP              [reduce using rule 22 (expression)]
    POWOP              [reduce using rule 22 (expression)]
    DOUBLEEQOP         [reduce using rule 22 (expression)]
    LESSTHANOP         [reduce using rule 22 (expression)]
    GREATERTHANOP      [reduce using rule 22 (expression)]
    LESSTHANOREQOP     [reduce using rule 22 (expression)]
    GREATERTHANOREQOP  [reduce using rule 22 (expression)]
    $default           reduce using rule 22 (expression)


State 47

   19 expression: expression . PLUSOP expression
   20           | expression . MINUSOP expression
   21           | expression . MULTOP expression
   22           | expression . DIVOP expression
   23           | expression . POWOP expression
   23           | expression POWOP expression .
   24           | expression . DOUBLEEQOP expression
   25           | expression . LESSTHANOP expression
   26           | expression . GREATERTHANOP expression
   27           | expression . GREATERTHANOREQOP expression
   28           | expression . LESSTHANOREQOP expression

    PLUSOP             shift, and go to state 29
    MINUSOP            shift, and go to state 30
    MULTOP             shift, and go to state 31
    DIVOP              shift, and go to state 32
    POWOP              shift, and go to state 33
    DOUBLEEQOP         shift, and go to state 34
    LESSTHANOP         shift, and go to state 35
    GREATERTHANOP      shift, and go to state 36
    LESSTHANOREQOP     shift, and go to state 37
    GREATERTHANOREQOP  shift, and go to state 38

    PLUSOP             [reduce using rule 23 (expression)]
    MINUSOP            [reduce using rule 23 (expression)]
    MULTOP             [reduce using rule 23 (expression)]
    DIVOP              [reduce using rule 23 (expression)]
    POWOP              [reduce using rule 23 (expression)]
    DOUBLEEQOP         [reduce using rule 23 (expression)]
    LESSTHANOP         [reduce using rule 23 (expression)]
    GREATERTHANOP      [reduce using rule 23 (expression)]
    LESSTHANOREQOP     [reduce using rule 23 (expression)]
    GREATERTHANOREQOP  [reduce using rule 23 (expression)]
    $default           reduce using rule 23 (expression)


State 48

   19 expression: expression . PLUSOP expression
   20           | expression . MINUSOP expression
   21           | expression . MULTOP expression
   22           | expression . DIVOP expression
   23           | expression . POWOP expression
   24           | expression . DOUBLEEQOP expression
   24           | expression DOUBLEEQOP expression .
   25           | expression . LESSTHANOP expression
   26           | expression . GREATERTHANOP expression
   27           | expression . GREATERTHANOREQOP expression
   28           | expression . LESSTHANOREQOP expression

    PLUSOP             shift, and go to state 29
    MINUSOP            shift, and go to state 30
    MULTOP             shift, and go to state 31
    DIVOP              shift, and go to state 32
    POWOP              shift, and go to state 33
    DOUBLEEQOP         shift, and go to state 34
    LESSTHANOP         shift, and go to state 35
    GREATERTHANOP      shift, and go to state 36
    LESSTHANOREQOP     shift, and go to state 37
    GREATERTHANOREQOP  shift, and go to state 38

    PLUSOP             [reduce using rule 24 (expression)]
    MINUSOP            [reduce using rule 24 (expression)]
    MULTOP             [reduce using rule 24 (expression)]
    DIVOP              [reduce using rule 24 (expression)]
    POWOP              [reduce using rule 24 (expression)]
    DOUBLEEQOP         [reduce using rule 24 (expression)]
    LESSTHANOP         [reduce using rule 24 (expression)]
    GREATERTHANOP      [reduce using rule 24 (expression)]
    LESSTHANOREQOP     [reduce using rule 24 (expression)]
    GREATERTHANOREQOP  [reduce using rule 24 (expression)]
    $default           reduce using rule 24 (expression)


State 49

   19 expression: expression . PLUSOP expression
   20           | expression . MINUSOP expression
   21           | expression . MULTOP expression
   22           | expression . DIVOP expression
   23           | expression . POWOP expression
   24           | expression . DOUBLEEQOP expression
   25           | expression . LESSTHANOP expression
   25           | expression LESSTHANOP expression .
   26           | expression . GREATERTHANOP expression
   27           | expression . GREATERTHANOREQOP expression
   28           | expression . LESSTHANOREQOP expression

    PLUSOP             shift, and go to state 29
    MINUSOP            shift, and go to state 30
    MULTOP             shift, and go to state 31
    DIVOP              shift, and go to state 32
    POWOP              shift, and go to state 33
    DOUBLEEQOP         shift, and go to state 34
    LESSTHANOP         shift, and go to state 35
    GREATERTHANOP      shift, and go to state 36
    LESSTHANOREQOP     shift, and go to state 37
    GREATERTHANOREQOP  shift, and go to state 38

    PLUSOP             [reduce using rule 25 (expression)]
    MINUSOP            [reduce using rule 25 (expression)]
    MULTOP             [reduce using rule 25 (expression)]
    DIVOP              [reduce using rule 25 (expression)]
    POWOP              [reduce using rule 25 (expression)]
    DOUBLEEQOP         [reduce using rule 25 (expression)]
    LESSTHANOP         [reduce using rule 25 (expression)]
    GREATERTHANOP      [reduce using rule 25 (expression)]
    LESSTHANOREQOP     [reduce using rule 25 (expression)]
    GREATERTHANOREQOP  [reduce using rule 25 (expression)]
    $default           reduce using rule 25 (expression)


State 50

   19 expression: expression . PLUSOP expression
   20           | expression . MINUSOP expression
   21           | expression . MULTOP expression
   22           | expression . DIVOP expression
   23           | expression . POWOP expression
   24           | expression . DOUBLEEQOP expression
   25           | expression . LESSTHANOP expression
   26           | expression . GREATERTHANOP expression
   26           | expression GREATERTHANOP expression .
   27           | expression . GREATERTHANOREQOP expression
   28           | expression . LESSTHANOREQOP expression

    PLUSOP             shift, and go to state 29
    MINUSOP            shift, and go to state 30
    MULTOP             shift, and go to state 31
    DIVOP              shift, and go to state 32
    POWOP              shift, and go to state 33
    DOUBLEEQOP         shift, and go to state 34
    LESSTHANOP         shift, and go to state 35
    GREATERTHANOP      shift, and go to state 36
    LESSTHANOREQOP     shift, and go to state 37
    GREATERTHANOREQOP  shift, and go to state 38

    PLUSOP             [reduce using rule 26 (expression)]
    MINUSOP            [reduce using rule 26 (expression)]
    MULTOP             [reduce using rule 26 (expression)]
    DIVOP              [reduce using rule 26 (expression)]
    POWOP              [reduce using rule 26 (expression)]
    DOUBLEEQOP         [reduce using rule 26 (expression)]
    LESSTHANOP         [reduce using rule 26 (expression)]
    GREATERTHANOP      [reduce using rule 26 (expression)]
    LESSTHANOREQOP     [reduce using rule 26 (expression)]
    GREATERTHANOREQOP  [reduce using rule 26 (expression)]
    $default           reduce using rule 26 (expression)


State 51

   19 expression: expression . PLUSOP expression
   20           | expression . MINUSOP expression
   21           | expression . MULTOP expression
   22           | expression . DIVOP expression
   23           | expression . POWOP expression
   24           | expression . DOUBLEEQOP expression
   25           | expression . LESSTHANOP expression
   26           | expression . GREATERTHANOP expression
   27           | expression . GREATERTHANOREQOP expression
   28           | expression . LESSTHANOREQOP expression
   28           | expression LESSTHANOREQOP expression .

    PLUSOP             shift, and go to state 29
    MINUSOP            shift, and go to state 30
    MULTOP             shift, and go to state 31
    DIVOP              shift, and go to state 32
    POWOP              shift, and go to state 33
    DOUBLEEQOP         shift, and go to state 34
    LESSTHANOP         shift, and go to state 35
    GREATERTHANOP      shift, and go to state 36
    LESSTHANOREQOP     shift, and go to state 37
    GREATERTHANOREQOP  shift, and go to state 38

    PLUSOP             [reduce using rule 28 (expression)]
    MINUSOP            [reduce using rule 28 (expression)]
    MULTOP             [reduce using rule 28 (expression)]
    DIVOP              [reduce using rule 28 (expression)]
    POWOP              [reduce using rule 28 (expression)]
    DOUBLEEQOP         [reduce using rule 28 (expression)]
    LESSTHANOP         [reduce using rule 28 (expression)]
    GREATERTHANOP      [reduce using rule 28 (expression)]
    LESSTHANOREQOP     [reduce using rule 28 (expression)]
    GREATERTHANOREQOP  [reduce using rule 28 (expression)]
    $default           reduce using rule 28 (expression)


State 52

   19 expression: expression . PLUSOP expression
   20           | expression . MINUSOP expression
   21           | expression . MULTOP expression
   22           | expression . DIVOP expression
   23           | expression . POWOP expression
   24           | expression . DOUBLEEQOP expression
   25           | expression . LESSTHANOP expression
   26           | expression . GREATERTHANOP expression
   27           | expression . GREATERTHANOREQOP expression
   27           | expression GREATERTHANOREQOP expression .
   28           | expression . LESSTHANOREQOP expression

    PLUSOP             shift, and go to state 29
    MINUSOP            shift, and go to state 30
    MULTOP             shift, and go to state 31
    DIVOP              shift, and go to state 32
    POWOP              shift, and go to state 33
    DOUBLEEQOP         shift, and go to state 34
    LESSTHANOP         shift, and go to state 35
    GREATERTHANOP      shift, and go to state 36
    LESSTHANOREQOP     shift, and go to state 37
    GREATERTHANOREQOP  shift, and go to state 38
